--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,23 +2,21 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
-    "lib": [
-      "ES2020",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
+
     /* Linting */
     "strict": false,
     "noUnusedLocals": false,
@@ -26,35 +24,20 @@
     "noImplicitAny": false,
     "noFallthroughCasesInSwitch": false,
     "strictNullChecks": false,
+
     /* Path mapping */
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./client/*"
-      ],
-      "@shared/*": [
-        "./shared/*"
-      ]
-    },
-    "allowJs": true,
-    "incremental": true,
-    "resolveJsonModule": true,
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
+      "@/*": ["./client/*"],
+      "@shared/*": ["./shared/*"]
+    }
   },
   "include": [
     "client/**/*",
     "server/**/*",
     "shared/**/*",
-    "vite.config.server.ts",
     "vite.config.ts",
-    ".next/types/**/*.ts"
+    "vite.config.server.ts"
   ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "exclude": ["node_modules", "dist"]
 }
